--- a/styles.css
+++ b/styles.css
@@ -344,6 +344,18 @@ body {
         font-size: 3.75rem;
     }
 }
+.hero-location{
+    font-size: 1.5rem;
+    font-weight: 600;
+    line-height: 1;
+    color: var(--muted-foreground);
+    margin-bottom: 2rem;
+    max-width: 42rem;
+    margin-left: auto;
+    margin-right: auto;
+    line-height: 1.7;
+}
+
 
 .hero-subtitle {
     font-size: 1.125rem;
