--- a/styles.css
+++ b/styles.css
@@ -15,7 +15,7 @@
 
 @font-face {
     font-family: 'Inter';
-    src: url('./assets/fonts/inter-400.woff2') format('woff2');
+    src: url('./assets/fonts/inter-v20-latin-400.woff2') format('woff2');
     font-weight: 400;
     font-style: normal;
     font-display: swap;
@@ -23,7 +23,7 @@
 
 @font-face {
     font-family: 'Inter';
-    src: url('./assets/fonts/inter-800.woff2') format('woff2');
+    src: url('./assets/fonts/inter-v20-latin-800.woff2') format('woff2');
     font-weight: 800;
     font-style: normal;
     font-display: swap;
